[package]
name = "docker-volume"
version = "0.1.1"
edition = "2021"
authors = ["Joseph Godlewski <jgodlewski@xethub.com>"]
description = "A Rust helper for docker volumes"
homepage = "https://github.com/xetdata/docker-volume-rs"
repository = "https://github.com/xetdata/docker-volume-rs"
readme = "README.md"
keywords = ["docker"]
license = "BSD-3-Clause"
categories = ["filesystem", "virtualization"]
publish = true
include = ["src/**/*", "src/*", "Cargo.toml", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = "0.6.18"
hyper = "0.14.26"
hyperlocal = "0.8.0"
serde = "1.0.163"
serde_json = "1.0.96"
serde_derive = "1.0.163"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter", "json"] }
thiserror = "1.0.40"
